--- a/docs/config.json
+++ b/docs/config.json
@@ -2,7 +2,7 @@
     "title": "UDOO X86 Docs",
     "tagline": "UDOO X86 Documentation",
     "author": "UDOO Team",
-    "image": "http://www.udoo.org/docs-x86/img/logo_docs.png",
+    "image": "/docs/img/logos/docs.png",
     "ignore": {
         "files": [
         ]
@@ -13,12 +13,12 @@
 	    "breadcrumbs": false,
 	    "date_modified": false,
 	    "float": false,
-	    "repo": "UDOOboard/Neo-Docs",
+	    "repo": "UDOOboard/X86-Docs",
 	    "links": {
-	        "Home": "http://www.udoo.org",
-	        "Downloads": "http://www.udoo.org/downloads",
-	        "Tutorials": "http://www.udoo.org/tutorial",
-	        "Forum": "http://www.udoo.org/forum"
+	        "Home": "https://www.udoo.org",
+	        "Downloads": "https://www.udoo.org/downloads",
+	        "Tutorials": "https://www.udoo.org/tutorial",
+	        "Forum": "https://www.udoo.org/forum"
 	    }
     }
 }
