--- a/docs/config.json
+++ b/docs/config.json
@@ -16,7 +16,7 @@
 	    "repo": "UDOOboard/X86-Docs",
 	    "links": {
 	        "Home": "https://www.udoo.org",
-	        "Downloads": "https://www.udoo.org/downloads",
+	        "Downloads": "https://www.udoo.org/other-resources/",
 	        "Tutorials": "https://www.udoo.org/tutorial",
 	        "Forum": "https://www.udoo.org/forum",
           "Github Docs": "https://github.com/UDOOboard/X86-Docs"
