--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 script: bash ./deploy.sh
 language: php
 php:
-- 5.5
+- 7.2
+install:
+   - composer global require daux/daux.io
 env:
   global:
   - GH_REF: github.com/UDOOboard/X86-Docs.git
