--- a/docs/config.json
+++ b/docs/config.json
@@ -2,7 +2,7 @@
     "title": "UDOO X86 Docs",
     "tagline": "UDOO X86 Documentation",
     "author": "UDOO Team",
-    "image": "/docs/img/logos/docs.png",
+    "image": "../img/logo_docs.png",
     "ignore": {
         "files": [
         ]
